--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
 
   <!-- Meta Description (SEO) -->
   <meta name="description"
-    content="Bob Johnson is a full stack developer specializing in MEAN and MERN stack (MongoDB, Express, Angular, React, Node.js). Explore my portfolio to see web app development projects.">
+    content="Adam Karasick is a CHANGE THIS">
   <meta name="keywords"
-    content="Bob, Bob Johnson, Bob+Johnson, Bob Portfolio, Bob+Portfolio, Bob Johnson Full Stack Developer, Bob+Johnson+Full+Stack+Developer, Bob Johnson Freelancer, Bob+Johnson+Freelancer, Bob Johnson Angular, Best Angular Developer, Best Full Stack Developer, Full Stack Developer, MEAN Stack, MERN Stack, MongoDB, Express, React, Node.js, Web Development, Mobile App Development, JavaScript Developer, Web Applications, Software Development, Meteor, Redux, RxJS, HTML5, CSS3, TypeScript, JavaScript, Storybook, Bootstrap, React Query, NgRx, Java, C++">
-  <meta name="author" content="Bob Johnson">
-  <title>Bob Johnson | Full Stack Developer</title>
+    content="Adam, Adam Karasick, Adam+Karasick, Adam Portfolio, Adam+Portfolio">
+  <meta name="author" content="Adam Karasick">
+  <title>Adam Karasick | Data Analytics & Forensic Accounting</title>
 
   <!-- Open Graph Meta Tags (for social sharing) -->
-  <meta property="og:title" content="Adam Karasick | Forensic Accounting & Data Analytics">
+  <meta property="og:title" content="Adam Karasick | Data Analytics & Forensic Accounting">
   <meta property="og:description"
-    content="Adam Karasick is a full stack developer specializing in MEAN and MERN stack (MongoDB, Express, Angular, React, Node.js). Explore my portfolio to see web app development projects.">
+    content="Adam Karasick is CHANGE THIS">
   <meta property="og:image" content="https://akarasick.github.io/portfolio-1/assets/images/favicon.png">
   <meta property="og:url" content="https://akarasick.github.io/portfolio-1/">
   <meta property="og:type" content="website">
@@ -45,16 +45,16 @@
     {
       "@context": "https://schema.org",
       "@type": "Person",
-      "name": "Bob Johnson",
+      "name": "Adam Karasick",
       "url": "https://akarasick.github.io/portfolio-1/",
       "image": "https://akarasick.github.io/portfolio-1/assets/images/favicon.png",
-      "description": "Bob Johnson is a full stack developer specializing in MEAN and MERN stack (MongoDB, Express, Angular, React, Node.js). Explore my portfolio to see web app development projects.",
+      "description": "Adam Karasick is CHANGE THIS",
       "sameAs": [
-        "https://www.linkedin.com/in/er-Bob",
-        "https://x.com/Bob091998",
+        "https://www.linkedin.com/in/er-Adam",
+        "https://x.com/Adam091998",
         "https://github.com/anonymous0000007"
       ],
-      "jobTitle": "Full Stack Developer (MEAN/MERN Stack)",
+      "jobTitle": "CHANGE THIS",
       "worksFor": {
         "@type": "Organization",
         "name": "Freelance"
@@ -183,7 +183,7 @@
         <!-- responsive image load -->
         <picture class="man">
           <source srcset="./assets/images/man.svg" media="(min-width: 768px)" />
-          <img width="" height="" alt="Bob" />
+          <img width="" height="" alt="Adam" />
         </picture>
         <picture class="ring">
           <source srcset="./assets/images/ellipse.svg" media="(min-width: 768px)" />
@@ -206,22 +206,11 @@
 
     <section id="about">
       <h2 class="h2">About Me</h2>
-      <p class="h3 text-align-justify">I am a driven MEAN and MERN stack developer, a force of innovation with an
-        unrelenting passion for creating powerful, scalable applications. My expertise in both front-end and back-end
-        technologies fuels my creativity, allowing me to turn complex challenges into seamless, intuitive solutions. I
-        don't just follow trends—I lead them, and I thrive on pushing boundaries and disrupting the status quo. My
-        coding is precise, my logic sharp, and my ambition fierce.
+      <p class="h3 text-align-justify">I am CHANGE THIS
       </p>
       <p class="h3 text-align-justify">
-        ADJJJJ, I am an active open-source contributor, dedicating my skills to projects like Mozilla,
-        where I collaborate with a global community of like-minded creators. I'm always looking for new opportunities to
-        collaborate, whether it's through freelance projects or innovative partnerships. If you're ready to work with
-        someone who's not afraid to take risks, challenge norms, and create something extraordinary, let’s connect. I'm
-        here to build, innovate, and disrupt—one line of code at a time.</p>
-      <p class="h3 text-align-justify">As a passionate chess player with a rating of <b>1600+</b>, I bring the same
-        strategic thinking and problem-solving
-        skills to my development work as I do to the chessboard. Whether it’s optimizing code or planning my next move,
-        I approach every challenge with a sharp mind and relentless drive.</p>
+        CHANGE THIS 2</p>
+      <p class="h3 text-align-justify">CHANGE THIS 3</p>
       <section>
         <h2 class="h3"><b>Skills</b></h2>
         <p class="h3">HTML, CSS, JavaScript (ES6+), Typescript, MongoDB, Express.js, Angular, React, Node.js, Meteor,
