--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
     <section id="home">
       <div>
-        <h2 class="h2">Hello World <br /> I'm <span id="board"></span></h2>
+        <h2 class="h2">Providing My Tailored Solutions for <br /> <span id="board"></span></h2>
         <p id="home-description" class="h3 text-align-justify"></p>
       </div>
       <div class="developer">
