--- a/index.html
+++ b/index.html
@@ -212,9 +212,16 @@
         CHANGE THIS 2</p>
       <p class="h3 text-align-justify">CHANGE THIS 3</p>
       <section>
-        <h2 class="h3"><b>Skills</b></h2>
-        <p class="h3">HTML, CSS, JavaScript (ES6+), Typescript, MongoDB, Express.js, Angular, React, Node.js, Meteor,
-          git, mercurial</p>
+        <h2 class="h3"><b>Experience with:</b></h2>
+        <p class="h3">Power BI, Excel Automation, Excel Clean-Up & Standardization, Power Query, Power Automate, Visio, SharePoint, Office 365, QuickBooks</p>
+      </section>
+		<section>
+        <h2 class="h3"><b>Professional Certifications:</b></h2>
+        <p class="h3">Certified Public Accountant (CPA), Certified Fraud Examiner (CFE)</p>
+      </section>
+		<section>
+        <h2 class="h3"><b>Cryptocurrency Certifications:</b></h2>
+        <p class="h3">TRM Labs Certified Investigator, TRM Labs Advanced Crypto Investigator</p>
       </section>
     </section>
 
