--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
       <div class="developer">
         <!-- responsive image load -->
         <picture class="man">
-          <source srcset="./assets/images/man.svg" media="(min-width: 768px)" />
+          <source srcset="./assets/images/adam.jpg" media="(min-width: 768px)" />
           <img width="" height="" alt="Adam" />
         </picture>
         <picture class="ring">
