--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
       <div class="developer">
         <!-- responsive image load -->
         <picture class="man">
-          <source srcset="./assets/images/adam.jpg"  />
+          <source srcset="./assets/images/adam.svg"  />
           <img width="" height="" alt="Adam" />
         </picture>
 
