--- a/index.html
+++ b/index.html
@@ -211,12 +211,12 @@
       <section>
         <h2 class="h3"><b>Experience with:</b></h2>
         <p class="h3">Power BI, Excel Automation, Excel Clean-Up & Standardization, Power Query, Power Automate, Visio, SharePoint, Office 365, QuickBooks</p>
-      </section>
+      </section style="margin-top: 20px;">
 		<section>
         <h2 class="h3"><b>Professional Certifications:</b></h2>
         <p class="h3">Certified Public Accountant (CPA), Certified Fraud Examiner (CFE)</p>
       </section>
-		<section>
+		<section style="margin-top: 20px;">
         <h2 class="h3"><b>Cryptocurrency Certifications:</b></h2>
         <p class="h3">TRM Labs Certified Investigator, TRM Labs Advanced Crypto Investigator</p>
       </section>
