--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <!-- class="menu-item" is required if u want to auto close menu on click -->
             <li><a class="menu-item" href="#home">Home</a></li>
             <li><a class="menu-item" href="#about">About Me</a></li>
-            <li><a class="menu-item" href="#projects">Projects</a></li>
+            <li><a class="menu-item" href="#projects">Some Of My Work</a></li>
             <li>
               <a id="cv-download"
                 href="https://drive.google.com/uc?export=download&id=1d5K7sJIDKpzP-Eoskk0F4btoBMrOKGJI"
